@startuml

title __WIDGET_TURNTABLE's Class Diagram__\n

  namespace com.example.widget_turntable {
    class com.example.widget_turntable.MainActivity {
        - binding : ActivityMainBinding
        # onCreate()
        - setupViewPager()
    }
  }
  

  namespace com.example.widget_turntable {
    class com.example.widget_turntable.MainActivity.ViewPagerAdapter {
        - mFragmentList : List<Fragment>
        - mFragmentTitleList : List<String>
        + ViewPagerAdapter()
        + addFragment()
        + getCount()
        + getItem()
        + getPageTitle()
    }
  }
  

  com.example.widget_turntable.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.widget_turntable.MainActivity +-down- com.example.widget_turntable.MainActivity.ViewPagerAdapter
  com.example.widget_turntable.MainActivity.ViewPagerAdapter -up-|> androidx.fragment.app.FragmentPagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
